feat: update footer contents and css

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,6 +6,12 @@ import "../styles/globals.scss";
 ---
 
 <footer>
+  <h3>Want more info about me?</h3>
+  <p>
+    Sent me a message though one of the following socials or check my work
+    experience on my <a href="https://www.linkedin.com/in/gerbenveenhof/" target="_blank">LinkedIn</a>
+    page.
+  </p>
   <div class="center-text">
     <div class="social-media">
       <a href="https://github.com/nlxdodge" target="_blank" aria-label="Github">
@@ -71,6 +77,10 @@ import "../styles/globals.scss";
   @import "../styles/globals.scss";
   footer {
     margin-top: 50px;
+
+    h3, p {
+      text-align: center;
+    }
 
     .astro-link {
       font-family: $template-header-font;
