chore: code styling and move span to class for css

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -13,7 +13,11 @@ const { icon = null, second = false } = Astro.props;
 <div class="banner">
   {icon && <Icon name={icon} aria-hidden="true" aria-label="copyright" />}
   <slot />
-  {icon && second && <Icon name={icon} aria-hidden="true" aria-label="copyright" />}
+  {
+    icon && second && (
+      <Icon name={icon} aria-hidden="true" aria-label="copyright" />
+    )
+  }
 </div>
 
 <style lang="scss">
