--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -29,9 +29,10 @@ const { Content } = await entry.render();
     new Date(entry.data.date) < date ? (
       <Banner icon="mdi:warning-octagon" second={true}>
         <p>
-          This post is older than 2 years 
-          <span>({entry.data.date.toLocaleDateString()})</span>, things might have changed!
-          Please check for yourself if something has been updated/depricated!
+          This post is older than 2 years
+          <span class="banner">({entry.data.date.toLocaleDateString()})</span>, things might
+          have changed! Please check for yourself if something has been
+          updated/depricated!
         </p>
       </Banner>
     ) : null
@@ -47,5 +48,10 @@ const { Content } = await entry.render();
   .date {
     font-style: italic;
     margin-top: 0;
+  }
+  
+  .banner {
+    font-style: italic;
+    white-space: nowrap;
   }
 </style>
