fix: text not being read-able and new component allignment

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -32,7 +32,7 @@ const { icon = null, second = false } = Astro.props;
     align-items: center;
 
     @include media(">tablet") {
-      margin-bottom: 25px;
+      margin: 0 0 25px 0;
       gap: 25px;
       flex-direction: row;
       justify-content: space-between;
