--- a/src/components/Label.astro
+++ b/src/components/Label.astro
@@ -11,10 +11,10 @@ import "../styles/globals.scss";
   .label {
     margin-right: 10px;
     padding: 3px 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     display: inline-flex;
     background-color: $template-color-accent;
-    color: $template-color;
+    color: #fff;
     font-size: 1.1rem;
   }
 </style>
