--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@
     --template-color-accent: #f79f1f;
     --template-color-code-block: #333333;
 
-    --color-orange: #E98D0C;
+    --color-orange: #d4800b;
     --color-purple: #981f82;
     --color-cyan: #009d9c;
 
