chore: fix label margins

--- a/src/components/Label.astro
+++ b/src/components/Label.astro
@@ -9,7 +9,7 @@ import "../styles/globals.scss";
 <style lang="scss">
   @import "../styles/globals.scss";
   .label {
-    margin-right: 10px;
+    margin: 0 10px 5px 0;
     padding: 3px 10px;
     border-radius: 5px;
     display: inline-flex;
