chore: set image format to avif

--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -20,6 +20,7 @@ import ScrapyardImage from "../assets/images/works/scrapyard.png";
           <Image
             src={KorfbalTrainerImage}
             alt="Korfbal Trainer"
+            format="avif"
           />
           <p>Korfbal Trainer <span>(Javascript)</span></p>
         </a>
@@ -33,6 +34,7 @@ import ScrapyardImage from "../assets/images/works/scrapyard.png";
           <Image
             src={KeyDungeonImage}
             alt="Keydungeon"
+            format="avif"
           />
           <p>Keydungeon <span>(PHP)</span></p>
         </a>
@@ -46,6 +48,7 @@ import ScrapyardImage from "../assets/images/works/scrapyard.png";
           <Image
             src={AQ3DImage}
             alt="AQ3D Bot"
+            format="avif"
           />
           <p>AQ3D Bot <span>(Java)</span></p>
         </a>
@@ -59,6 +62,7 @@ import ScrapyardImage from "../assets/images/works/scrapyard.png";
           <Image
             src={ScrapyardImage}
             alt="Scrapyard Mod"
+            format="avif"
           />
           <p>Scrapyard Mod <span>(Java)</span></p>
         </a>
