--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -20,6 +20,7 @@ const sortedWorks = works.sort((o) => Number.MIN_SAFE_INTEGER + o.data.order);
             width="505"
             height="258"
             alt={work.data.image}
+            format="avif"
           />
           <div class="work-title">
             {work.data.title}
