fix: urls going to the wrong place

--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from 'astro:assets';
 import "@glidejs/glide/src/assets/sass/glide.core.scss";
 import "../styles/globals.scss";
 ---
@@ -9,7 +8,7 @@ import "../styles/globals.scss";
     <ul class="glide__slides">
       <li class="glide__slide">
         <a
-          href="/work/korfbal_trainer/"
+          href="/works/korfbal_trainer/"
           aria-label="Check the Korfbal Trainer project"
         >
           <img
@@ -22,7 +21,7 @@ import "../styles/globals.scss";
       <li class="glide__slide">
         <a
          
-          href="/work/keydungeon/"
+          href="/works/keydungeon/"
           aria-label="Check the Keydungeon project"
         >
           <img
@@ -35,7 +34,7 @@ import "../styles/globals.scss";
       <li class="glide__slide">
         <a
          
-          href="/work/aq3d_bot/"
+          href="/works/aq3d_bot/"
           aria-label="Check the AQ3D Bot project"
         >
           <img
@@ -48,7 +47,7 @@ import "../styles/globals.scss";
       <li class="glide__slide">
         <a
          
-          href="/work/scrapyard/"
+          href="/works/scrapyard/"
           aria-label="Check the Scrapyard Mod project"
         >
           <img
