fix: aria labels for Google Pagespeed

--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -9,7 +9,7 @@ import "../styles/globals.scss";
       <li class="glide__slide">
         <a
           href="/works/korfbal_trainer/"
-          aria-label="Check the Korfbal Trainer project"
+          aria-label="Korfbal Trainer (Javascript)"
         >
           <img
             src="../assets/images/works/korfbal_trainer.png"
@@ -22,7 +22,7 @@ import "../styles/globals.scss";
         <a
          
           href="/works/keydungeon/"
-          aria-label="Check the Keydungeon project"
+          aria-label="Keydungeon (PHP)"
         >
           <img
             src="../assets/images/works/keydungeon.png"
@@ -35,7 +35,7 @@ import "../styles/globals.scss";
         <a
          
           href="/works/aq3d_bot/"
-          aria-label="Check the AQ3D Bot project"
+          aria-label="AQ3D Bot (Java)"
         >
           <img
             src="../assets/images/works/aq3d_bot.png"
@@ -48,7 +48,7 @@ import "../styles/globals.scss";
         <a
          
           href="/works/scrapyard/"
-          aria-label="Check the Scrapyard Mod project"
+          aria-label="Scrapyard Mod (Java)"
         >
           <img
             src="../assets/images/works/scrapyard.png"
