fix: build not working

--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -15,10 +15,8 @@ import test from "../assets/images/works/korfbal_trainer.png";
           aria-label="Korfbal Trainer (Javascript)"
         >
           <Image
-            src={test.src}
+            src={test}
             alt="Korfbal Trainer"
-            width={test.width}
-            height={test.height}
             format="avif"
           />
           <p>Korfbal Trainer <span>(Javascript)</span></p>
