fix: color schema switching

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -25,6 +25,7 @@ const { icon = null, second = false } = Astro.props;
   .banner {
     display: flex;
     background-color: $template-color-accent;
+    color: $template-color;
     padding: 10px;
     margin: 0 10px;
     flex-direction: column;
