--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -171,6 +171,7 @@ import Scrapyard from "../assets/images/works/scrapyard.png";
             width: auto;
           }
 
+          border-radius: 7px;
           width: 240px;
           position: absolute;
           bottom: 0;
