--- a/src/styles/_defaults.scss
+++ b/src/styles/_defaults.scss
@@ -9,6 +9,13 @@ body {
   font: normal 1.2rem $template-default-font;
 }
 
+main {
+  padding: 0;
+  max-width: 1024px;
+  min-height: calc(100vh - 380px);
+  margin: 0 auto;
+}
+
 a {
   color: $template-color-accent;
 
@@ -19,6 +26,8 @@ a {
 
 img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 noscript {
