--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="404 | Gerben Veenhof">
   <div class="error center-text">
-    <h1>Page has not been found</h1>
+    <h1>404 - Page has not been found</h1>
     <p>But have a quote instead:</p>
     <Quote class="quote" />
     <FlexCenter>
