fix: script being renderd and not dynmically

--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -1,27 +1,32 @@
 ---
-const quotes = [
-  '"You\'ve got to have a sense of humor to keep your sanity." - Lance Bass',
-  '"Stand on the shoulders of giants." - Bernard of Chartres',
-  '"Dream small or don\'t dream at all" - Lightning McQueen',
-  '"All models are wrong, some are useful." - George Box',
-  '"Never forget you are someone\'s reason to smile, because you are a joke." - Rimuru Tempest',
-  '"Planning for failure is the worst type of planning" - Rick Sanchez',
-  '"Words are about communicating" - Linus Sebastian',
-  '"How can you move forward if you keep regretting the past?" - Edward Elric ',
-  '"The worst battle is between what you know, and what you feel" - Voilet Evergarden',
-  '"I know we said goodbye, but I didn\'t know. It was forever." - Voilet Evergarden',
-  "\"If you always do what you've always done, you'll always get what you've always got.\" - Henry Ford",
-  '"Sorry I gotta walk my flowers and water my dog." - Teensie from Rayman',
-  '"I am 10 billion percent sure." - Senku Ishigami'
-];
-
-function randomFromArray(inputArray) {
-  return inputArray[Math.floor(Math.random() * inputArray.length)];
-}
 ---
 
+<script>
+  const quotes = [
+    '"You\'ve got to have a sense of humor to keep your sanity." - Lance Bass',
+    '"Stand on the shoulders of giants." - Bernard of Chartres',
+    '"Dream small or don\'t dream at all" - Lightning McQueen',
+    '"All models are wrong, some are useful." - George Box',
+    '"Never forget you are someone\'s reason to smile, because you are a joke." - Rimuru Tempest',
+    '"Planning for failure is the worst type of planning" - Rick Sanchez',
+    '"Words are about communicating" - Linus Sebastian',
+    '"How can you move forward if you keep regretting the past?" - Edward Elric ',
+    '"The worst battle is between what you know, and what you feel" - Voilet Evergarden',
+    '"I know we said goodbye, but I didn\'t know. It was forever." - Voilet Evergarden',
+    "\"If you always do what you've always done, you'll always get what you've always got.\" - Henry Ford",
+    '"Sorry I gotta walk my flowers and water my dog." - Teensie from Rayman',
+    '"I am 10 billion percent sure." - Senku Ishigami',
+  ];
+
+  function randomFromArray(inputArray) {
+    return inputArray[Math.floor(Math.random() * inputArray.length)];
+  }
+  const quote = document.getElementById("error-quote");
+  quote.innerText = randomFromArray(quotes);
+</script>
+
 <div class="quote">
-  <p>{randomFromArray(quotes)}</p>
+  <p id="error-quote">Quote</p>
 </div>
 
 <style lang="scss">
