--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,7 +68,7 @@ import Header from "../components/Header.astro";
       
       setColor(localStorage.getItem("color") != undefined ? localStorage.getItem("color") : getRandomColor());
     </script>
-    <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer
+    <script type="text/partytown" src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer
     ></script>
   </body>
 </html>
