--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import { SEO } from "astro-seo";
 
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
-import { GoogleAnalytics } from "astro-analytics";
+import MinimalAnalytics from "../components/MinimalAnalytics.astro";
 
 ---
 
@@ -74,7 +74,7 @@ import { GoogleAnalytics } from "astro-analytics";
 <script type="text/partytown" src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer
 ></script>
 
-<GoogleAnalytics id="G-01E73RLVK8" />
+<MinimalAnalytics id="G-01E73RLVK8" />
 
 <style is:global lang="scss">
   main {
