--- a/src/pages/posts/[tag]/[page].astro
+++ b/src/pages/posts/[tag]/[page].astro
@@ -1,48 +1,30 @@
 ---
 import { getCollection } from "astro:content";
-import Button from "../../components/Button.astro";
-import Layout from "../../layouts/Layout.astro";
-import Label from "../../components/Label.astro";
+import Button from "../../../components/Button.astro";
+import Layout from "../../../layouts/Layout.astro";
 
 export async function getStaticPaths({ paginate }) {
   const posts = await getCollection("posts", ({ data }) => {
     return data.draft !== true;
   });
-  const sortedPosts = posts.sort(
-    (post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate(),
-  );
-  return paginate(sortedPosts, {
-    pageSize: 10,
+
+  const allTags = new Set(posts.flatMap((x) => x.data.tags).map(x => x.toLowerCase()));
+  return Array.from(allTags).flatMap((tag) => {
+    const filteredPosts = posts.filter((post) => post.data.tags.map(x => x.toLowerCase()).includes(tag));
+    const sortedPosts = filteredPosts.sort(
+      (post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate(),
+    );
+    return paginate(sortedPosts, {
+      params: { tag: tag },
+      pageSize: 10,
+    });
   });
 }
 
 const { page } = Astro.props;
-const posts = await getCollection("posts", ({ data }) => {
-  return data.draft !== true;
-});
-const allTags = posts.flatMap((p) => p.data.tags);
-let tagCounts = allTags.reduce((acc, tag) => {
-  acc[tag] = (acc[tag] || 0) + 1;
-  return acc;
-}, {});
-let sortedTags = allTags.sort((a, b) => tagCounts[b] - tagCounts[a]);
-let uniqueTags = sortedTags.filter(
-  (tag, index) => sortedTags.indexOf(tag) === index,
-);
 ---
 
 <Layout title="Posts | Gerben Veenhof">
-  <div class="tags">
-    {console.log("tags", uniqueTags.slice(0, 10))}
-    {
-      uniqueTags
-        .slice(0, 10)
-        .map((tag) => (
-          <Label href={"/posts/" + tag.toLowerCase() + "/1"}>{tag}</Label>
-        ))
-    }
-  </div>
-
   <div class="posts">
     {
       page.data.map((post) => (
