feat: change works title

--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -10,6 +10,7 @@ const sortedWorks = works.sort((o) => Number.MIN_SAFE_INTEGER + o.data.order);
 ---
 
 <Layout title="Works | Gerben Veenhof">
+  <h1 class="center-text">My Proud Works 👑</h1>
   <div class="works">
     {
       sortedWorks.map((work) => (
