--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,65 +8,88 @@ import { Icon } from "astro-icon";
   <h2>Want more info about me?</h2>
   <p>
     Sent me a message though one of the following socials or check my work
-    experience on my <a href="https://www.linkedin.com/in/gerbenveenhof/" target="_blank">LinkedIn</a>
+    experience on my
+    <a href="https://www.linkedin.com/in/gerbenveenhof/" target="_blank">
+      LinkedIn
+    </a>
     page.
   </p>
   <div class="center-text">
     <div class="social-media">
-      <a href="https://github.com/nlxdodge" target="_blank" aria-label="Github">
+      <a
+        href="https://github.com/nlxdodge"
+        target="_blank"
+        aria-label="Opens my Github page in a new tab"
+      >
         <Icon
           name="ant-design:github-filled"
-          aria-hidden="true"
-          aria-label="github"
+          title="My Github page"
+          aria-label="My Github page"
         />
       </a>
       <a
         href="https://www.linkedin.com/in/gerbenveenhof/"
         target="_blank"
-        aria-label="Linkedin"
+        aria-label="Opens my Linked-In page in a new tab"
       >
         <Icon
           name="simple-icons:linkedin"
-          aria-hidden="true"
-          aria-label="linkedin"
+          title="My Linked-In page"
+          aria-label="My Linked-In page"
         />
       </a>
       <a
-        href="https://twitter.com/gerbenveenhof"
+        href="https://x.com/gerbenveenhof"
         target="_blank"
-        aria-label="Twitter"
+        aria-label="Opens my X (Twitter) page on a new tab"
       >
-        <Icon name="mdi:twitter" aria-hidden="true" aria-label="twitter" />
+        <Icon
+          name="mdi:twitter"
+          title="My Twitter page"
+          aria-label="My Twitter page"
+        />
       </a>
     </div>
     <div class="flex-box">
       <div>
         <Icon
           name="ri:copyright-fill"
+          title="Copyright Icon"
           aria-hidden="true"
-          aria-label="copyright"
+          aria-label="Copyright Icon"
         />
         Gerben Veenhof
       </div>
       <div>
         <Icon
           name="mdi:slash-forward"
+          title="Slash Forward"
           aria-hidden="true"
-          aria-label="slash-forward"
+          aria-label="Slash Forward"
         />
         <span class="split-span">{currentYear}</span>
         <Icon
-          pack="mdi"
-          name="slash-forward"
+          name="mdi:slash-forward"
+          title="Slash Forward"
           aria-hidden="true"
-          aria-label="slash-forward"
+          aria-label="Slash Forward"
         />
       </div>
       <div>
-        Made with <Icon pack="mdi" name="heart" /> in
-        <a class="astro-link" href="https://astro.build/" target="_blank"
-          >Astro</a
+        Made with <Icon
+          name="mdi:heart"
+          title="Heart Icon"
+          aria-hidden="true"
+          aria-label="Heart Icon"
+        /> in
+        <a
+          class="astro-link"
+          href="https://astro.build/"
+          target="_blank"
+          aria-label="Opens Astro website in a new tab"
         >
+          Astro
+        </a>
       </div>
     </div>
     <div id="wcb" class="carbonbadge wcb-d"></div>
@@ -76,7 +99,8 @@ import { Icon } from "astro-icon";
   footer {
     margin-top: 50px;
 
-    h2, p {
+    h2,
+    p {
       text-align: center;
     }
 
