--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
   <div class="error center-text">
     <h1>404 - Page has not been found</h1>
     <p>But have a quote instead:</p>
-    <Quote class="quote" />
+    <Quote />
     <FlexCenter>
       <Button href="/" icon="mdi:arrow-back-circle" nofollow={false}>
         Homepage
