feat: update front-page text for mistakes

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,7 +10,7 @@ export interface Props {
 
 const {
   href = "#",
-  icon = "DEFAULT:ICON",
+  icon = null,
   nofollow = true,
   flipIcon = false,
 } = Astro.props;
