--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,12 +30,12 @@ import { Icon } from "astro-icon";
       <a
         href="https://www.linkedin.com/in/gerbenveenhof/"
         target="_blank"
-        aria-label="Opens my Linked-In page in a new tab"
+        aria-label="Opens my LinkedIn page in a new tab"
       >
         <Icon
           name="simple-icons:linkedin"
-          title="My Linked-In page"
-          aria-label="My Linked-In page"
+          title="My LinkedIn page"
+          aria-label="My LinkedIn page"
         />
       </a>
       <a
